@@ -65,7 +65,6 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
-      <version>8.0.33</version>
     </dependency>
 
     <dependency>
@@ -89,14 +88,12 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>21</source>
-                <target>21</target>
-                <compilerArgs>--enable-preview</compilerArgs>
-            </configuration>
-        </plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+        <release>21</release>
+    </configuration>
+</plugin>
     </plugins>
   </build>
 </project>
